# neuromodel

./: Cargo.toml  LICENSE  anotheranothermodel.py  anothermodel.py  blah.py  config.json  graph.py  iteration.py  main.py  model.py  newthing.py  run_config.json  simulation.py
output/2024-11-30 13-31-28/: config.json
rust/src/: model.rs
src/: main.rs  model.rs
