[package]
name = "neuromodel"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.9.0-alpha.1", features = [ "small_rng" ] }
vec_to_array = "0.2.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
ndarray = "0.9.1"
rand_distr = "0.5.0-alpha.1"
chrono = "0.4.38"

[profile.dev]
opt-level = 3
