[package]
name = "neuromodel"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.9.0-alpha.1", features = [ "small_rng" ] }
vec_to_array = "0.2.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
rand_distr = "0.5.0-alpha.1"
chrono = "0.4.38"
ndarray = "0.16.0"
flame = "0.2.2"

[profile.dev]
opt-level = 3
